[package]
name = "stackle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
alloc = []
std = []
nightly = []

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.126"

[target.'cfg(windows)'.dependencies]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false
